[package]
name = "graphql_websocket_client"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-router = "1.57.1"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.31"
http = "0.2.12"
pin-project-lite = "0.2.15"
schemars = "0.8.21"
serde = "1.0.215"
serde_json = "1.0.133"
serde_json_bytes = "0.2.4"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = "0.20.1"
tracing = "0.1.40"
uuid = { version = "1.11.0", features = ["v4"] }
